css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: "Lato", sans-serif;
    font-weight: 200;
    font-style: normal;
}

.flex {
    display: flex;
}

.center {
    align-items: center;
}

.sp-between {
    justify-content: space-between;
}

.green-bar {
    background-color: #009688;
    height: 20vh;
}

body>main {
    background-color: #dadbd2;
    height: 80vh;
}

.chat-box {
    background-color: white;
    position: absolute;
    height: 95vh;
    /* width of 80% before complete */
    width: 95%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

header i {
    color: #acabac;
    margin-right: 0.8rem;
}

.chat-box header {
    height: 8%;
    background-color: #eaeaea;
}

.left-chat {
    width: calc(35% - 1px);
    border-right: 1px solid lightgrey;
}

.right-chat {
    width: 66%;
}

header img {
    border-radius: 50%;
    width: 40px;
    margin-left: 0.5rem;
    margin-right: 0.25rem;
}

.size-of-chat {
    height: 9%;
}

.notify {
    background-color: #8edafc;
}

.round-circle {
    width: 40px;
    height: 40px;
    justify-content: center;
    margin-left: 1rem;
    margin-right: 0.5rem;
    background-color: #f1fafe;
    border-radius: 50%;
}

.round-circle i {
    color: #8edafc;
}

a,
.search-box i {
    color: gray;
}

.small-text {
    font-size: 0.7rem;
}

.search-box {
    height: 35px;
    background-color: #eaeaea;
    justify-content: center;
}

.search-box input {
    border: 0;
    width: 95%;
    height: 25px;
    text-align: center;
}

.search-box i {
    position: absolute;
    left: 30px;
}

.chat-preview {
    height: calc(((100% - 35px) - 9%) - 8%);
    overflow: auto;
}

.chat-preview>div {
    height: 15%;
    width: 100%;
    align-items: flex-start;
    position: relative;
}

.chat-preview img {
    width: 55px;
    height: 55px;
    border-radius: 50%;
    margin: auto 10px;
}

.chat-preview .text-wrapper {
    margin-top: 10px;
}

.hour {
    position: absolute;
    right: 15px;
    top: 0;
    color: darkgray
}

.chat-system {
    background-image: url(../img/mine.jpg);
    background-size: contain;
    height: 84%;
    border-right: #f3eeea 1px solid;
}

.text-box {
    align-items: center;
    justify-content: space-evenly;
    background-color: #f3eeea;
    height: 8%;
}

.text-box input {
    width: 80%;
    height: 60%;
    border: 0;
    padding: 0 0.5rem;
}

.chat-container {
    padding-top: 3rem;
    margin: 0 auto;
    width: 80%;
    height: 100%;
}

.message {
    height: fit-content;
    width: 40%;
    padding: 0.5rem 1rem 1rem;
    border-radius: 8px;
    margin-bottom: 0.5rem;
    position: relative;
}

.sent {
    margin-left: auto;
    background-color: #d5f9ba;
}

.received {
    margin-right: auto;
    background-color: white;
}

.sent-hour {
    position: absolute;
    right: 5px;
    bottom: 3px;
}

